--- a/portfolio-col-3.html
+++ b/portfolio-col-3.html
@@ -373,7 +373,7 @@
                             </li>
                         </ul>
                         <div class="copyright">
-                            <p>Copyright © 2016 IntimateBlog. Designed and Developed by
+                            <p>Copyright &#9426 2016 IntimateBlog. Designed and Developed by
                             <a href="http://graygrids.com/">GrayGrids</a></p>
                         </div>
                     </div>
