--- a/single.html
+++ b/single.html
@@ -1487,7 +1487,7 @@
                             </li>
                         </ul>
                         <div class="copyright">
-                            <p>Copyright © 2016 IntimateBlog. Designed and Developed by
+                            <p>Copyright &#9426 2016 IntimateBlog. Designed and Developed by
                             <a href="http://graygrids.com/">GrayGrids</a></p>
                         </div>
                     </div>
